set sidebar to fixed position with overflow.

--- a/sfdoc.css
+++ b/sfdoc.css
@@ -33,6 +33,10 @@ footer {
 
 #sidebar {
 	float: left;
+	position: fixed;
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100%;
 }
 
 #wrapper {
